--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-    <title>Survey</title>
+    <title>Employee of the Month</title>
     <meta charset="utf-8">
     <script src="https://www.gstatic.com/firebasejs/4.1.3/firebase.js"></script>
 
